[package]
name = "rout"
version = "0.1.0"
authors = ["aaron@lx Manjaro <rootisalone@iy.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
onedrive-api = { version = "0.8.1", features = ["beta"] }
open = "1.4.0"
pico-args = "0.4.0"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
envy = "0.4.1"
lazy_static = "1.4.0"
rand = "0.8.2"
reqwest = "0.11.0"
serde = "1.0.104"
serde_json = "1.0.48"
